@@ -4,6 +4,8 @@
 	            - Some adjustments for public release.
 	            - Adjusted for gtkmacintegration in OSX version to
 	              display the mneu in OSX menu bar.
+	            - removed screen_changed() in drawing_area operation
+	              to avoid the window resize failure on OSX.
 
 2017.05.17 ver2.9.2 - Added "Add" button in FCDB/Standard treeview panels
 	              to add a selected object into the object tree.
